<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <Button
        android:text="直接播放视频"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="play_video"
        android:id="@+id/bt_play"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />

    <Button
        android:text="检查是否有缓存"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:id="@+id/bt_check"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="check"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="wu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="#ff0000"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:id="@+id/textView"
        android:layout_below="@+id/bt_check"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="播放可用缓存"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:onClick="play_cache"
        android:id="@+id/bt_paly_cache" />

</RelativeLayout>
